// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders correctly with search 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Nav
    search={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="sitename"
        >
          netflixroulette
        </h1>,
        <Link
          replace={false}
          to="/"
        >
          <button
            className="btn btn-default btn-search"
          >
            SEARCH
          </button>
        </Link>,
      ],
      "id": "nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "netflixroulette",
          "className": "sitename",
        },
        "ref": null,
        "rendered": "netflixroulette",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": <button
            className="btn btn-default btn-search"
          >
            SEARCH
          </button>,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "SEARCH",
            "className": "btn btn-default btn-search",
          },
          "ref": null,
          "rendered": "SEARCH",
          "type": "button",
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="sitename"
          >
            netflixroulette
          </h1>,
          <Link
            replace={false}
            to="/"
          >
            <button
              className="btn btn-default btn-search"
            >
              SEARCH
            </button>
          </Link>,
        ],
        "id": "nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "netflixroulette",
            "className": "sitename",
          },
          "ref": null,
          "rendered": "netflixroulette",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": <button
              className="btn btn-default btn-search"
            >
              SEARCH
            </button>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "SEARCH",
              "className": "btn btn-default btn-search",
            },
            "ref": null,
            "rendered": "SEARCH",
            "type": "button",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Nav renders correctly without search 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Nav
    search={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="sitename"
        >
          netflixroulette
        </h1>,
        null,
      ],
      "id": "nav",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "netflixroulette",
          "className": "sitename",
        },
        "ref": null,
        "rendered": "netflixroulette",
        "type": "h1",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="sitename"
          >
            netflixroulette
          </h1>,
          null,
        ],
        "id": "nav",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "netflixroulette",
            "className": "sitename",
          },
          "ref": null,
          "rendered": "netflixroulette",
          "type": "h1",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
